force-app/main/default/objects/Campaign/fields/Actual_cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_cost__c</fullName>
    <formula>Venue_Rental_Cost__c + Marketing_Spend__c +( Price_Per_Cover__c *  Booked_Seats__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Venue_Rental_Cost__c + Marketing_Spend__c +( Price_Per_Cover__c * Booked_Seats__c )</inlineHelpText>
    <label>Actual Cost Incl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>