force-app/main/default/objects/Campaign/fields/Actual_Cost_Excl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_Excl_Vat__c</fullName>
    <formula>(Marketing_Spend__c +  Venue_Rental_Cost__c +( Price_Per_Cover__c * Booked_Seats__c ))*0.8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Marketing_Spend__c +  Venue_Rental_Cost__c +( Price_Per_Cover__c * Booked_Seats__c ))*0.8</inlineHelpText>
    <label>Actual Cost Excl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>