force-app/main/default/objects/Campaign/fields/Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue__c</fullName>
    <inlineHelpText>Sum of value on all Orders generated in relation to this Campaign/Lecture</inlineHelpText>
    <label>Actual Revenue Incl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>