force-app/main/default/objects/Campaign/fields/Actual_Revenue_Excl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_Excl_Vat__c</fullName>
    <formula>Actual_Revenue__c * 0.8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual_Revenue__c * 0.8</inlineHelpText>
    <label>Actual Revenue Excl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>