force-app/main/default/objects/Campaign/fields/Ad_Created__c.field-meta.xml
<CustomField>
    <fullName>Ad_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad Created</label>
    <type>Checkbox</type>
</CustomField>