force-app/main/default/objects/Campaign/fields/Ad_CTR__c.field-meta.xml
<CustomField>
    <fullName>Ad_CTR__c</fullName>
    <description>Click-Through-Rating - Indicates how often an ad is clicked vs. how often it is showed. If half the customers who see the add click it, it will have a CTR of 0.5.</description>
    <label>Ad CTR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>