force-app/main/default/objects/Campaign/fields/Ad_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ad_End_Date__c</fullName>
    <label>Ad End Date</label>
    <type>Date</type>
</CustomField>