force-app/main/default/objects/Campaign/fields/Ad_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Ad_Frequency__c</fullName>
    <label>Ad Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>