force-app/main/default/objects/Campaign/fields/Ad_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Ad_Image_URL__c</fullName>
    <label>Ad Image URL</label>
    <type>Url</type>
</CustomField>