force-app/main/default/objects/Campaign/fields/Ad_Set_ID__c.field-meta.xml
<CustomField>
    <fullName>Ad_Set_ID__c</fullName>
    <label>Ad Set ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>