force-app/main/default/objects/Campaign/fields/Ad_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ad_Start_Date__c</fullName>
    <label>Ad Start Date</label>
    <type>Date</type>
</CustomField>