force-app/main/default/objects/Campaign/fields/Ad_Status__c.field-meta.xml
<CustomField>
    <fullName>Ad_Status__c</fullName>
    <label>Ad Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>