force-app/main/default/objects/Campaign/fields/Additional_Fixed_Cost_Excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fixed_Cost_Excl_VAT__c</fullName>
    <formula>Additional_Fixed_Cost_Incl_VAT__c * 0.8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Fixed Cost Excl. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>