force-app/main/default/objects/Campaign/fields/Additional_Fixed_Cost_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fixed_Cost_Incl_VAT__c</fullName>
    <label>Additional Fixed Cost Incl. VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>