force-app/main/default/objects/Campaign/fields/Adjusted_Expected_revenue_Excl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Expected_revenue_Excl_Vat__c</fullName>
    <formula>CASE(Market_Unit__c, &apos;DFJ_DK&apos;,(NumberOfLeads *$CustomMetadata.Currency_Multiplier_Configuration__mdt.Din_Familie_Jurist.Revenue_Multiplier_Value__c*0.8),
&apos;FA_SE&apos;, (NumberOfLeads*$CustomMetadata.Currency_Multiplier_Configuration__mdt.dinfamiliejurist_nu.Revenue_Multiplier_Value__c*0.8),
&apos;Testamente_DK&apos;, (NumberOfLeads*$CustomMetadata.Currency_Multiplier_Configuration__mdt.Testamente_Danmark.Revenue_Multiplier_Value__c*0.8),
&apos;Testamente_SV&apos;, (NumberOfLeads*$CustomMetadata.Currency_Multiplier_Configuration__mdt.Testamente_Sverige.Revenue_Multiplier_Value__c*0.8) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Leads in Campaign * Avg. Lead Value) * 0.8</inlineHelpText>
    <label>Adjusted Expected Revenue Excl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>