force-app/main/default/objects/Campaign/fields/Ads_CPM__c.field-meta.xml
<CustomField>
    <fullName>Ads_CPM__c</fullName>
    <description>CPM is &quot;Cost Per Thousand&quot; and indicates how much is paid for 1.000 &quot;shows&quot; of the ad.</description>
    <label>Ads CPM</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>