force-app/main/default/objects/Campaign/fields/Airtable_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Airtable_Record_ID__c</fullName>
    <externalId>true</externalId>
    <label>Airtable Record ID</label>
    <length>17</length>
    <type>Text</type>
</CustomField>