force-app/main/default/objects/Campaign/fields/Associated_Location__c.field-meta.xml
<CustomField>
    <fullName>Associated_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Location</label>
    <referenceTo>AssociatedLocation</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>