force-app/main/default/objects/Campaign/fields/Attendance_Format__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Format__c</fullName>
    <label>Attendance Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>