force-app/main/default/objects/Campaign/fields/Attendee_Index__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Index__c</fullName>
    <formula>IF(
  ISBLANK(Attendee_Target__c) || Attendee_Target__c = 0,
  null,
  Attendees__c / Attendee_Target__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>