force-app/main/default/objects/Campaign/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The sum of Scanned Tickets on Campaigns in Hierarchy (Excluding Cancelled Campaigns or Campaigns that are not Open for Bookings)</inlineHelpText>
    <label>Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>