force-app/main/default/objects/Campaign/fields/Automatic_Status_Updates__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Status_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Status Updates</label>
    <type>Checkbox</type>
</CustomField>