force-app/main/default/objects/Campaign/fields/Average_Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Average_Days_to_Close__c</fullName>
    <formula>IF(
   OR(Total_Days_to_Close__c = 0, ISBLANK(Total_Days_to_Close__c)),
   0,
   Total_Days_to_Close__c / Count_of_Closed_Leads__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Days to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>