force-app/main/default/objects/Campaign/fields/Average_No_Show_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_No_Show_Value__c</fullName>
    <formula>IF(
    Revenue_on_No_Show_Incl_VAT__c = 0,
    0,
    Revenue_on_No_Show_Incl_VAT__c /  Count_of_No_Show__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the average value on all No Show, on this Campaign - including the ones that have no Order</inlineHelpText>
    <label>Average No Show Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>