force-app/main/default/objects/Campaign/fields/Average_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Amount__c</fullName>
    <formula>IF(
    Revenue_Incl_VAT__c = 0,
    0,
    Revenue_Incl_VAT__c / Count_of_Orders__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>