force-app/main/default/objects/Campaign/fields/Average_Order_Amount_on_No_Show__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Amount_on_No_Show__c</fullName>
    <formula>IF(
    Revenue_on_No_Show_Incl_VAT__c = 0,
    0,
    Revenue_on_No_Show_Incl_VAT__c / Count_of_No_Show__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Revenue on No Show Incl. VAT / Count of No Show</inlineHelpText>
    <label>Average Order Amount on No Show</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>