force-app/main/default/objects/Campaign/fields/Average_Order_Amount_on_TM__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Amount_on_TM__c</fullName>
    <formula>IF(
    Revenue_on_TM_Incl_VAT__c = 0,
    0,
    Revenue_on_TM_Incl_VAT__c /  Count_of_Orders_with_Tilmeldingsblanket__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Revenue on TM Incl. VAT / Count of Tilmeldingsblanket</inlineHelpText>
    <label>Average Order Amount on TM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>