force-app/main/default/objects/Campaign/fields/Average_Tilmeldingsblanket_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Tilmeldingsblanket_Value__c</fullName>
    <formula>IF(
    Revenue_on_TM_Incl_VAT__c = 0,
    0,
    Revenue_on_TM_Incl_VAT__c /  Count_of_Closed_Tilmeldingsblanket__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the average value on all Tilmeldingsblanket, on this Campaign - including the ones that have no Order</inlineHelpText>
    <label>Average Tilmeldingsblanket Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>