force-app/main/default/objects/Campaign/fields/Avg_Registration_Form_Value_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Avg_Registration_Form_Value_in_Hierarchy__c</fullName>
    <formula>TM_Value_in_Hierarchy__c / Closed_TM_in_Hierarchy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Registration Form Value in Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>