force-app/main/default/objects/Campaign/fields/Being_Updated__c.field-meta.xml
<CustomField>
    <fullName>Being_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Being Updated</label>
    <type>Checkbox</type>
</CustomField>