force-app/main/default/objects/Campaign/fields/Billable_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Billable_Attendees__c</fullName>
    <label>Attendees for Billing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>