force-app/main/default/objects/Campaign/fields/Billetto_Event_Page__c.field-meta.xml
<CustomField>
    <fullName>Billetto_Event_Page__c</fullName>
    <label>Billetto Event Page</label>
    <type>Url</type>
</CustomField>