force-app/main/default/objects/Campaign/fields/Booked_Seats__c.field-meta.xml
<CustomField>
    <fullName>Booked_Seats__c</fullName>
    <label>Booked Seats</label>
    <summarizedField>CampaignMember.Remaining_Tickets__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>