force-app/main/default/objects/Campaign/fields/Booked_Seats_From_Airtable__c.field-meta.xml
<CustomField>
    <fullName>Booked_Seats_From_Airtable__c</fullName>
    <label>Booked Seats (From Airtable)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>