force-app/main/default/objects/Campaign/fields/Booking_Index__c.field-meta.xml
<CustomField>
    <fullName>Booking_Index__c</fullName>
    <formula>IF(
ISBLANK(Booking_Target__c) || Booking_Target__c = 0,
null,
Current_Bookings__c /  Booking_Target__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>