force-app/main/default/objects/Campaign/fields/Booking_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Booking_Percentage__c</fullName>
    <formula>IF(
Booked_Seats__c  = 0,
0,
( Booked_Seats__c  /  Capacity__c ) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>