force-app/main/default/objects/Campaign/fields/Booking_Target__c.field-meta.xml
<CustomField>
    <fullName>Booking_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Booking Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>