force-app/main/default/objects/Campaign/fields/Budgeted_cost_Excl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_cost_Excl_Vat__c</fullName>
    <formula>CASE(Market_Unit__c, &apos;DFJ_DK&apos;, ((Capacity__c*0.45)*$CustomMetadata.Currency_Multiplier_Configuration__mdt.Din_Familie_Jurist.Cost_Multiplier_Value__c*0.8 + Venue_Rental_Cost__c*0.8 +  Price_Per_Cover_Excl_Vat__c *Capacity__c),
&apos;FA_SE&apos;, ((Capacity__c*0.45)*$CustomMetadata.Currency_Multiplier_Configuration__mdt.dinfamiliejurist_nu.Cost_Multiplier_Value__c*0.8 + Venue_Rental_Cost__c*0.8 + Price_Per_Cover_Excl_Vat__c*Capacity__c),
&apos;Testamente_DK&apos;, ((Capacity__c*0.45)*$CustomMetadata.Currency_Multiplier_Configuration__mdt.Testamente_Danmark.Cost_Multiplier_Value__c*0.8 + Venue_Rental_Cost__c*0.8 + Price_Per_Cover_Excl_Vat__c*Capacity__c),
&apos;Testamente_SV&apos;, ((Capacity__c*0.45)*$CustomMetadata.Currency_Multiplier_Configuration__mdt.Testamente_Sverige.Cost_Multiplier_Value__c*0.8 + Venue_Rental_Cost__c*0.8 + Price_Per_Cover_Excl_Vat__c*Capacity__c) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>((Avg. Lead Cost * (Capacity * 0.45)) + Venue Rental Cost + (Price Per Cover * Capacity)) * 0.8</inlineHelpText>
    <label>Budgeted Cost Excl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>