force-app/main/default/objects/Campaign/fields/Budgeted_Marketing_Cost_Incl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Marketing_Cost_Incl_Vat__c</fullName>
    <formula>CASE(
Market_Unit__c,
&apos;DFJ_DK&apos;, (Capacity__c * 0.45) * $CustomMetadata.Currency_Multiplier_Configuration__mdt.Din_Familie_Jurist.Cost_Multiplier_Value__c,
&apos;FA_SE&apos;, (Capacity__c * 0.45) * $CustomMetadata.Currency_Multiplier_Configuration__mdt.dinfamiliejurist_nu.Cost_Multiplier_Value__c,
&apos;Testamente_DK&apos;, (Capacity__c * 0.45) * $CustomMetadata.Currency_Multiplier_Configuration__mdt.Testamente_Danmark.Cost_Multiplier_Value__c,
&apos;Testamente_SV&apos;, (Capacity__c * 0.45) * $CustomMetadata.Currency_Multiplier_Configuration__mdt.Testamente_Sverige.Cost_Multiplier_Value__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Capacity * 0.45) * Average Lead Cost</inlineHelpText>
    <label>Budgeted Marketing Cost Incl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>