force-app/main/default/objects/Campaign/fields/Budgeted_Seating_Cost_Incl_Vat__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Seating_Cost_Incl_Vat__c</fullName>
    <formula>CASE(Market_Unit__c, &apos;DFJ_DK&apos;, Venue_Rental_Cost__c + ( Price_Per_Cover__c  *Capacity__c) + Additional_Fixed_Cost_Incl_VAT__c,
&apos;FA_SE&apos;, Venue_Rental_Cost__c + ( Price_Per_Cover__c  *Capacity__c) + Additional_Fixed_Cost_Incl_VAT__c,
&apos;Testamente_DK&apos;, Venue_Rental_Cost__c + ( Price_Per_Cover__c  *Capacity__c) + Additional_Fixed_Cost_Incl_VAT__c ,
&apos;Testamente_SV&apos;, Venue_Rental_Cost__c + ( Price_Per_Cover__c  *Capacity__c) + Additional_Fixed_Cost_Incl_VAT__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Venue Rental Cost + Seating Cost + Fixed Cost</inlineHelpText>
    <label>Budgeted Seating Cost Incl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>