force-app/main/default/objects/Campaign/fields/Calculated_Registration_Form_Value__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Registration_Form_Value__c</fullName>
    <inlineHelpText>This field uses numbers not otherwise present on this Campaign Target. It is populated by a flow, that sums up all Campaign Members that were closed in a given period and calculates their values, regardless of when they attended a lecture.</inlineHelpText>
    <label>Calculated Registration Form Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>