force-app/main/default/objects/Campaign/fields/Calendly_Invitee_Uuid__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Invitee_Uuid__c</fullName>
    <label>Calendly Invitee Uuid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>