force-app/main/default/objects/Campaign/fields/Calendly_Rescheduling_URL__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Rescheduling_URL__c</fullName>
    <formula>&quot;https://calendly.com/reschedulings/&quot;&amp;Calendly_Invitee_Uuid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendly Rescheduling URL</label>
    <type>Text</type>
</CustomField>