force-app/main/default/objects/Campaign/fields/CalendlyAction__c.field-meta.xml
<CustomField>
    <fullName>CalendlyAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CalendlyAction</label>
    <referenceTo>Calendly__CalendlyAction__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>