force-app/main/default/objects/Campaign/fields/Campaign_Number__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Number__c</fullName>
    <displayFormat>CMP-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Campaign Number</label>
    <type>AutoNumber</type>
</CustomField>