force-app/main/default/objects/Campaign/fields/Campaign_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Revenue__c</fullName>
    <label>Campaign Revenue</label>
    <summarizedField>CampaignMember.Order_Price__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>