force-app/main/default/objects/Campaign/fields/Cancel_Reschedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reschedule_Date__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Date_of_rescheduling__c)),
  Date_of_rescheduling__c,
  IF(
    NOT(ISBLANK(Date_Of_Cancellation__c)),
    Date_Of_Cancellation__c,
    NULL
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel/Reschedule Date</label>
    <type>DateTime</type>
</CustomField>