force-app/main/default/objects/Campaign/fields/Capacity_Booked__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Booked__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The sum of Capacity on Campaigns in Hierarchy (Excluding Cancelled Campaigns or Campaigns that are not Open for Bookings)</inlineHelpText>
    <label>Capacity Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>