force-app/main/default/objects/Campaign/fields/Capacity_Index__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Index__c</fullName>
    <formula>IF(
    ISBLANK(Capacity_Target__c) || Capacity_Target__c = 0,
    null,
    CASE(
        Market_Unit__c,
        &quot;DFJ_DK&quot;, Realistic_Capacity_Booked__c / Capacity_Target__c,
        &quot;Testamente_DK&quot;, Realistic_Capacity_Booked__c / Capacity_Target__c,
        &quot;FA_SE&quot;, Capacity_Booked__c / Capacity_Target__c,
        &quot;Testamente_SV&quot;, Capacity_Booked__c / Capacity_Target__c,
        Realistic_Capacity_Booked__c / Capacity_Target__c 
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>