force-app/main/default/objects/Campaign/fields/Capacity_Target__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Capacity Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>