force-app/main/default/objects/Campaign/fields/Closed_TM_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Closed_TM_in_Hierarchy__c</fullName>
    <label>Closed TM in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>