force-app/main/default/objects/Campaign/fields/Combined_Order_Value_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Combined_Order_Value_in_Hierarchy__c</fullName>
    <label>Combined Order Value in Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>