force-app/main/default/objects/Campaign/fields/Count_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Attendees__c</fullName>
    <formula>Count_of_Show__c + Count_of_Tilmeldingsblanket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Show + Tilmeldingsblanket + Walk In Attendees</inlineHelpText>
    <label>Count of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>