force-app/main/default/objects/Campaign/fields/Count_of_Checked_in_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Checked_in_Attendees__c</fullName>
    <label>Count of Checked in Attendees</label>
    <summaryFilterItems>
        <field>CampaignMember.Scanned_at_entry__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>