force-app/main/default/objects/Campaign/fields/Count_of_Closed_Leads__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Closed_Leads__c</fullName>
    <label>Count of Closed Leads</label>
    <summaryFilterItems>
        <field>CampaignMember.Days_to_Close_num__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>