force-app/main/default/objects/Campaign/fields/Count_of_Closed_Tilmeldingsblanket__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Closed_Tilmeldingsblanket__c</fullName>
    <label>Count of Closed &quot;Tilmeldingsblanket&quot;</label>
    <summaryFilterItems>
        <field>CampaignMember.Days_to_Close_num__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CampaignMember.Event_m_destatus__c</field>
        <operation>equals</operation>
        <value>Tilmeldingsblanket</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>