force-app/main/default/objects/Campaign/fields/Count_of_Converted_Leads__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Converted_Leads__c</fullName>
    <label>Count of Converted Leads</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>